# python-train-cpp-infer-demo

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  OnnxClassifier.cpp  OnnxClassifier.h  README.md
.github/workflows/: cpp-cmake-ci.yml
models/cat_vs_dog/: best.infer_params.json
py/: inspect_onnx_for_cpp.py  predict_gui.py  train.py
scripts/: package-windows.ps1
src/: ImageUtils.cpp  ImageUtils.h  MainWindow.cpp  OnnxClassifier.cpp  OnnxClassifier.h
